kubernetes/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redemption-service
  namespace: redemption
  labels:
    app.kubernetes.io/name: redemption-service
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 9090
      targetPort: grpc
      protocol: TCP
  selector:
    app.kubernetes.io/name: redemption-service
